--- a/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
+++ b/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
@@ -92,6 +92,7 @@
 .button {
   display: flex;
   align-items: center;
+  justify-content: center;
   height: 40px;
   padding: var(--size-s2) 12px;
   cursor: pointer;
@@ -176,6 +177,13 @@
 .button_dropdown_active::after {
   transform: rotate(-180deg);
   filter: invert(0);
+}
+
+@media (width < 900px) {
+  .button {
+    width: 52px;
+    height: 52px;
+  }
 }
 /*!
  * Copyright 2014-2024  JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
@@ -541,6 +549,12 @@
 
 @media (width < 900px) {
   .filter-section {
+    margin-right: 0;
+  }
+  .filter-section--dropdown-toggle {
+    background-image: url(assets/filter.svg);
+  }
+  .filter-section--dropdown-toggle::after {
     display: none;
   }
 }
@@ -1166,10 +1180,6 @@
   margin-left: auto;
   background-image: url(assets/burger.svg);
 }
-
-.navigation-controls--btn_filter {
-  background-image: url(assets/filter.svg);
-}
 /*!
  * Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */ /*!
@@ -1326,7 +1336,95 @@
 }
 /*!
  * Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
- */
+ */ /*!
+* Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+*/ /*!
+* Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+*/
+:root {
+  --breakpoint-desktop-min: 900px;
+  --breakpoint-tablet-max: 899px;
+  --breakpoint-tablet-min: 440px;
+  --breakpoint-mobile-max: 439px;
+  --breakpoint-mobile-min: 360px;
+} /*!
+* Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+*/
+:root {
+  --color-key-blue: rgb(48, 127, 255);
+  --color-key-blue-05: rgb(48, 127, 255, 0.5);
+  --color-background-nav: rgb(39, 40, 44);
+  --color-background-nav-dt: rgb(50, 50, 55);
+  --color-background-page: rgb(255, 255, 255);
+  --color-background-page-dt: rgb(38, 38, 40);
+  --color-background-footer: rgb(235, 235, 235);
+  --color-background-footer-dt: rgb(50, 50, 55);
+  --color-text: rgb(0, 0, 0);
+  --color-text-dt: rgba(255, 255, 255, 0.96);
+  --color-text-light: rgba(0, 0, 0, 0.7);
+  --color-text-light-dt: rgba(255, 255, 255, 0.7);
+  --color-w05: rgba(255, 255, 255, 0.05);
+  --color-w10: rgba(255, 255, 255, 0.1);
+  --color-w16: rgba(255, 255, 255, 0.16);
+  --color-w50: rgba(255, 255, 255, 0.5);
+  --color-w70: rgba(255, 255, 255, 0.7);
+  --color-w80: rgba(255, 255, 255, 0.8);
+  --color-w100: rgba(255, 255, 255, 1);
+  --color-b05: rgba(0, 0, 0, 0.05);
+  --color-b08: rgba(0, 0, 0, 0.08);
+  --color-b20: rgba(0, 0, 0, 0.2);
+  --color-b50: rgba(0, 0, 0, 0.5);
+  --color-b70: rgba(0, 0, 0, 0.7);
+  --color-cd-punctuation: rgb(153, 153, 153);
+  --color-cd-keyword: rgb(0, 51, 179);
+  --color-cd-keyword-alternative: rgba(204, 120, 50);
+  --color-cd-builtin: rgb(6, 125, 23);
+  --color-cd-builtin-alternative: rgb(231, 191, 106);
+  --color-cd-function: rgb(0, 98, 122);
+  --color-cd-function-alternative: rgb(255, 198, 109);
+  --color-cd-operator: rgb(154, 110, 58);
+  --color-cd-operator-alternative: rgb(169, 183, 198);
+  --color-cd-body: rgb(0, 0, 0);
+  --color-cd-body-alternative: rgb(169, 183, 198);
+  --color-generic: rgb(83, 157, 243);
+  --color-jvm: rgb(77, 187, 95);
+  --color-js: rgb(255, 199, 0);
+  --color-wasm: rgb(255, 255, 255);
+} /*!
+* Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+*/
+:root {
+  --size-s1: 4px;
+  --size-s2: 8px;
+  --size-s3: 16px;
+  --size-m1: 24px;
+  --size-m2: 32px;
+  --size-m3: 48px;
+  --size-l1: 64px;
+  --size-l2: 72px;
+  --size-ta1: 40px;
+  --size-ta2: 52px;
+} /*!
+* Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+*/
+:root {
+  --font-family-default: JetBrains Sans, Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, Arial, sans-serif;
+  --font-family-mono: JetBrains Mono, SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
+  --font-h1: 600 44px/44px var(--font-family-default);
+  --font-h2: 600 32px/32px var(--font-family-default);
+  --font-h3: 600 24px/24px var(--font-family-default);
+  --font-h4: 600 16px/24px var(--font-family-default);
+  --font-text-m: 400 16px/24px var(--font-family-default);
+  --font-text-s: 400 14px/20px var(--font-family-default);
+  --font-code: 400 16px/24px var(--font-family-mono);
+} /*!
+* Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+*/
+:root {
+  --hover-transition: background-color 200ms ease-in-out;
+  --rotate-transition: transform 200ms ease-in-out;
+}
+
 .platform-tags {
   display: flex;
   flex-wrap: wrap;
